# mylang

./: .gitignore  README.md
compiler/: CMakeLists.txt
compiler/include/: compiler.h  formatting.h  unit.h
compiler/include/code/: generator.h
compiler/include/lex/: analyser.h  rule.h  token.h
compiler/include/syntax/: expressions.h  operators.h  parser.h  statements.h
compiler/include/units/: ast.h  code.h  lex.h  lexical.h
compiler/src/: compiler.cpp  main.cpp  unit.cpp
compiler/src/code/: generator.cpp
compiler/src/lex/: analyser.cpp  rule.cpp  token.cpp
compiler/src/syntax/: expressions.cpp  operators.cpp  parser.cpp  statements.cpp
compiler/src/units/ast/: blocks.cpp  expressions.cpp  operators.cpp  parser.cpp  statements.cpp
compiler/src/units/code/: declarationpass.cpp  definitionpass.cpp  generator.cpp  pass.cpp
compiler/src/units/lex/: analyser.cpp  rule.cpp  token.cpp
compiler/src/units/lexical/: analyser.cpp  rule.cpp  token.cpp
docs/: specification.lyx  tutorial.lyx  versions.lyx
examples/: expressions.mylang  factorial.mylang
examples/expressions/src/main/: main.mylang
examples/factorial/src/main/: factorial.mylang  main.mylang
examples/io/src/main/: main.mylang
examples/maths/src/main/: main.mylang
examples/networks/src/main/: main.mylang
stdlib/: build.json
stdlib/maths/: vector.mylang
stdlib/src/maths/: functions.mylang  rectangle.mylang  vector.mylang
stdlib/src/net/: address.mylang
stdlib/src/time/: weekday.mylang
stdlib/time/: weekday.mylang
tests/maths/src/main/: main.mylang
